--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         onSubmit: function (data) {
           // save to local storage
-          const confirm = window.confirm("データを保存しましすか？");
+          const confirm = window.confirm("データを保存しますか？");
           if (confirm) {
             if (usersData.length) {
               const dataFilters = usersData.filter(userData => userData.id === data.id);
